// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`правильно сформирует текст в шапке, если цена выше рынка более чем на 15% 1`] = `
"Цена значительно выше рыночной.
        Рекомендуем уменьшить цену
        или указать в описании к объявлению причину высокой цены."
`;

exports[`правильно сформирует текст в шапке, если цена выше рынка менее чем на 15% 1`] = `
"Цена выше рыночной.
        Рекомендуем уменьшить цену
        или указать в описании к объявлению причину высокой цены."
`;

exports[`правильно сформирует текст в шапке, если цена ниже рынка 1`] = `
"Цена значительно ниже рыночной.
        Рекомендуем увеличить цену
        или указать в описании к объявлению причину низкой цены."
`;
